- removed margin - recipient grid now has css class 0003150: Broken alignment in compose mail http://www.tine20.org/bugtracker/view.php?id=3150
git-svn-id: file:///www/metaways/svn.tine20.org/repo/trunk@16949 8d11cdf3-9d2f-0410-bbb5-e098f187f06b

--- a/tine20/Felamimail/css/Felamimail.css
+++ b/tine20/Felamimail/css/Felamimail.css
@@ -386,16 +386,15 @@
 /***** email composing dialog ******/
 
 /* disable grid headers */
-#felamimail-recipient-grid .x-grid3-hd-row, #felamimail-attachment-grid .x-grid3-hd-row {
+.felamimail-recipient-grid .x-grid3-hd-row, #felamimail-attachment-grid .x-grid3-hd-row {
     display:none;
 }
 
-#felamimail-recipient-grid .x-grid3 {
+.felamimail-recipient-grid .x-grid3 {
     background-color: #DFE8F6;
-    margin-bottom: 3px;
 }
 	
-#felamimail-recipient-grid tr {
+.felamimail-recipient-grid tr {
     border-color: #DFE8F6;  
 }
 
@@ -411,11 +410,11 @@
     padding-left: 19px;
 }
 
-#felamimail-recipient-grid .x-grid3-td-type {
+.felamimail-recipient-grid .x-grid3-td-type {
     background-color: #DFE8F6;
 }
 
-#felamimail-recipient-grid .x-grid3-td-address {
+.felamimail-recipient-grid .x-grid3-td-address {
     background-color: white;
 }
 
